# OHM_Screen

./: README.md
2.Firmware/: README.md  partitions.csv  sdkconfig.defaults
2.Firmware/components/encoder/: encoder.c
2.Firmware/components/encoder/include/: encoder.h
2.Firmware/components/gui_task/: CMakeLists.txt  gui_task.c
2.Firmware/components/gui_task/include/: gui_task.h
2.Firmware/components/lvgl_esp32_drivers/: lvgl_spi_conf.h
2.Firmware/components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.c  st7789.c
2.Firmware/components/ohm_data_parse/: CMakeLists.txt  ohm_data_parse.c
2.Firmware/components/ohm_data_parse/include/: ohm_data_parse.h
2.Firmware/components/user_http_request/: CMakeLists.txt  user_http_request.c
2.Firmware/components/user_http_request/include/: user_http_request.h
2.Firmware/components/user_smartconfig/: CMakeLists.txt  user_smartconfig.c
2.Firmware/components/user_smartconfig/include/: user_smartconfig.h
2.Firmware/components/user_test_case/: CMakeLists.txt  tc_parse_ohm.c  user_test_case.c
2.Firmware/components/user_test_case/include/: tc_parse_ohm.h  user_test_case.h
2.Firmware/main/: CMakeLists.txt  main.c
